--- a/app/views/static_pages/cadastro.html.erb
+++ b/app/views/static_pages/cadastro.html.erb
@@ -1,10 +1,22 @@
 <html>
+
+<style>
+body {
+  background-color: AntiqueWhite;
+}
+</style>
+
 <body>
-  <center>
-  <h1>SISLEG</h1>
-</center>
+
   <form>
-    <input type="text" name="Título" size="40" placeholder="título"/>
+    <h1>SISLEG</h1>
+    Título   <input type="text" name="Título" size="40" placeholder="digite o título do documento"/>
+</br>
+</br>
+</br>
+    Conteúdo    <textarea name="Conteúdo" rows="5" cols="40">insira o conteúdo do documento
+              </textarea>
   </form>
+
 </body>
 </html>
