--- a/app/views/static_pages/pesquisa.html.erb
+++ b/app/views/static_pages/pesquisa.html.erb
@@ -1,9 +1,51 @@
 <html>
+<style>
+body {
+  background-color: AntiqueWhite;
+}
+</style>
 <body>
-
   <form>
-    <h1>SISLEG</h1><input type="text" name="pesquisa" size="70" placeholder="digite os termos para pesquisa"/>
+  <h3>SISLEG                  <input type="text" name="Título" size="52" placeholder="termos digitados"/></h3>
   </form>
-
+  <form>
+    <select name="Título">
+      <option value="Férias">Férias</option>
+      <option value="Curso">Curso</option>
+      <option value="Ocorrência">Ocorrência</option>
+    </select>
+    <select name="Tipo">
+      <option value="Instrução">Instrução</option>
+      <option value="Circular">Circular</option>
+      <option value="Outros">Ocorrência</option>
+    </select>
+    <select name="Data">
+      <option value="Última Semana">Última semana</option>
+      <option value="Últimos 30 dias">Últimos 30 dias</option>
+      <option value="Outros">Data específica</option>
+    </select>
+    <select name="Número BOL">
+      <option value="Número">Número</option>
+      <option value="Título">Título</option>
+    </select>
+    <select name="Conteúdo">
+      <option value="Palavra Exata">Palavra exata</option>
+      <option value="Tags">Tags</option>
+      <option value="Outros">Nomes</option>
+    </select>
+  </form>
+</br>
+  <iframe src="static_pages#index" width="800" height="350" scrolling="no" frameborder="0" align="left">
+  </br>
+  </br>
+  </br>
+      <ol>
+        <li>Resultado 1</li>
+        </br>
+        <li>Resultado 2</li>
+        </br>
+        <li>Resultado 3</li>
+      </ol>
+  </iframe>
 </body>
 </html>
